--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "c0d09e68",
    "metadata": {},
    "outputs": [
@@ -1634,7 +1634,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_27341/135548117.py:19: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_5404/135548117.py:19: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_xticklabels(df_sorted['title'], rotation=90)\n"
      ]
     },
@@ -1787,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "346d0dc5",
    "metadata": {},
    "outputs": [
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "9304f91d",
    "metadata": {},
    "outputs": [
@@ -1835,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "f56517ff",
    "metadata": {},
    "outputs": [
@@ -1857,7 +1857,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SWhit_descriptive-statistics-exercises-pro-vDakRCvZ",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
